# rust-minimono

./: Cargo.toml  LICENSE.md  README.md  deny.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/msrv/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: ci.rs  ensure_installed.rs  fmt.rs  main.rs  msrv.rs  new.rs  wipe.rs
