[workspace]
exclude = []
members = ["xtask/", "crates/msrv/"]
resolver = "2"

[workspace.dependencies]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.dev.package]

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0
