[package]
edition = "2021"
license = "MIT"
name = "xtask"
publish = []
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
devx-cmd = "0.5.0"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
